--- a/index.html
+++ b/index.html
@@ -473,34 +473,22 @@
 <div class="content">
     <div class="w3-container w3-card w3-white w3-margin-bottom">
         <div class="profile1">
-            <div class="w3-container">
-              <div class="publication-item">
                 <h5 class="w3-opacity"><b>Mitacs Globalink Research Intern</b></h5>
                 <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2023 - Aug 2023</h6>
                 <p><i class="fa fa-map-marker fa-fw w3-margin-right"></i>Hamilton, Canada</p>
                 <p><i class="fa fa-user fa-fw w3-margin-right"></i>Dr. Chi Tang</p>
                 <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Artificial Neural Networks, Long Term Short Memory, Hyper-parameter Optimization, Smart Grid</p>
-              </div>
-            </div>
-
-            <div class="w3-container">
-                <div class="publication-item">
+<hr>
                 <h5 class="w3-opacity"><b>Machine Learning Intern, Unify AI, UK</b></h5>
                 <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2022 - Jul 2022</h6>
                 <p><i class="fa fa-map-marker fa-fw w3-margin-right"></i>London, UK</p>
                 <p><i class="fa fa-code fa-fw w3-margin-right"></i>Helped in developing a model to enable automatic code conversions between frameworks and developed multi-framework support.</p>
-              </div>
-            </div>
-
-            <div class="w3-container">
-             <div class="publication-item">
+<hr>
                 <h5 class="w3-opacity"><b>Summer Research Intern, Indian Statistical Institute, Kolkata, India</b></h5>
                 <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2021 - Sep 2021</h6>
                 <p><i class="fa fa-user fa-fw w3-margin-right"></i>Dr. Subhamoy Maitra </p>
                 <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Quantum Algorithms, Deutsch-Josza Algorithm, Grover's Algorithm, Bernstein-Vazirani Algorithm, Quantum Fourier Transform, and Quantum Phase estimation.</p>
                 <p><i class="fa fa-book fa-fw w3-margin-right"></i>Studied HHL Algorithm, Quantum Phase estimation & Generated MUBs (Mutually Unbiased Bases)</p>
-              </div>
-            </div>
         </div>
     </div>
 </div>
@@ -509,16 +497,10 @@
 
                <button class="collapsible"><i class="fa fa-envelope fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i> Latest News </button>
                <div class="content">
-                 <div class="w3-container w3-card w3-white" id="publications" style="scroll-margin-top: 100px;">
-                    <div class="w3-container">
-                      <div class = "profile1">
-                        <div class = "publication-item">
+                      <div class = "profile">
                        <p>[Aug. 2024] I started my PhD at Georgia Institute of Technology, Atanta, USA!</p>
                        <p>[July 2024] I completed my graduation at IIEST Shibpur, India!</p>
                        <p>[Jan 2024] My undergrad thesis got accepted as a workshop paper at IGARSS, Athens, Greece!</p>
-                     </div>
-                     </div>
-                    </div>
                 </div>
                </div>
 
@@ -573,7 +555,6 @@
                                <p>Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing [QIP]</p>
                                <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
                            </div>
-                           <!-- Add similar styling for other journal papers -->
                        </div>
                    </div>
                </div>
