--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
         .profile1 p {
             margin-bottom: 5px;
-            font-size: 17px;
+            font-size: 16px;
             color: #666; /* Medium text color */
         }
 
@@ -497,7 +497,7 @@
 
                <button class="collapsible"><i class="fa fa-envelope fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i> Latest News </button>
                <div class="content">
-                      <div class = "profile">
+                      <div class = "profile1">
                        <p>[Aug. 2024] I started my PhD at Georgia Institute of Technology, Atanta, USA!</p>
                        <p>[July 2024] I completed my graduation at IIEST Shibpur, India!</p>
                        <p>[Jan 2024] My undergrad thesis got accepted as a workshop paper at IGARSS, Athens, Greece!</p>
@@ -508,7 +508,6 @@
                    <i class="fa fa-file fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i> CV
                </button>
                <div class="content">
-                   <div class="w3-container w3-card w3-white" id="publications" style="scroll-margin-top: 100px;">
                        <div class="profile1">
                            <h2 class="section-title">Conference Publications</h2>
                            <div class="publication-item">
@@ -554,7 +553,6 @@
                            <div class="publication-item">
                                <p>Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing [QIP]</p>
                                <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
-                           </div>
                        </div>
                    </div>
                </div>
