--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
         .profile1 p {
             margin-bottom: 5px;
-            font-size: 16px;
+            font-size: 15px;
             color: #666; /* Medium text color */
         }
 
@@ -471,25 +471,27 @@
     <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i> Work Experience
 </button>
 <div class="content">
-    <div class="w3-container w3-card w3-white w3-margin-bottom">
         <div class="profile1">
+          <div class="publication-item">
                 <h5 class="w3-opacity"><b>Mitacs Globalink Research Intern</b></h5>
                 <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2023 - Aug 2023</h6>
                 <p><i class="fa fa-map-marker fa-fw w3-margin-right"></i>Hamilton, Canada</p>
                 <p><i class="fa fa-user fa-fw w3-margin-right"></i>Dr. Chi Tang</p>
                 <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Artificial Neural Networks, Long Term Short Memory, Hyper-parameter Optimization, Smart Grid</p>
-<hr>
+         </div>
+          <div class="publication-item">
                 <h5 class="w3-opacity"><b>Machine Learning Intern, Unify AI, UK</b></h5>
                 <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2022 - Jul 2022</h6>
                 <p><i class="fa fa-map-marker fa-fw w3-margin-right"></i>London, UK</p>
                 <p><i class="fa fa-code fa-fw w3-margin-right"></i>Helped in developing a model to enable automatic code conversions between frameworks and developed multi-framework support.</p>
-<hr>
+         </div>
+          <div class="publication-item">
                 <h5 class="w3-opacity"><b>Summer Research Intern, Indian Statistical Institute, Kolkata, India</b></h5>
                 <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2021 - Sep 2021</h6>
                 <p><i class="fa fa-user fa-fw w3-margin-right"></i>Dr. Subhamoy Maitra </p>
                 <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Quantum Algorithms, Deutsch-Josza Algorithm, Grover's Algorithm, Bernstein-Vazirani Algorithm, Quantum Fourier Transform, and Quantum Phase estimation.</p>
                 <p><i class="fa fa-book fa-fw w3-margin-right"></i>Studied HHL Algorithm, Quantum Phase estimation & Generated MUBs (Mutually Unbiased Bases)</p>
-        </div>
+         </div>                
     </div>
 </div>
 
