--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
            border-color: rgba(0, 0, 0, 0.3);
         }
 
+        .publication-text {
+            margin: 0; /* Remove default margins */
+            line-height: 1.4; /* Adjust line height for better readability */
+        }
+
 
 
 
@@ -489,9 +494,9 @@
                 <h5 class="w3-opacity"><b>Summer Research Intern, Indian Statistical Institute, Kolkata, India</b></h5>
                 <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2021 - Sep 2021</h6>
                 <p><i class="fa fa-user fa-fw w3-margin-right"></i>Dr. Subhamoy Maitra </p>
-                <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Quantum Algorithms, Deutsch-Josza Algorithm, Grover's Algorithm, Bernstein-Vazirani Algorithm, Quantum Fourier Transform, and Quantum Phase estimation.</p>
+                <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Quantum Algorithms, Deutsch-Josza Algorithm, Grover's Algorithm, Bernstein Vazirani Algorithm, Quantum Fourier Transform, and Quantum Phase estimation.</p>
                 <p><i class="fa fa-book fa-fw w3-margin-right"></i>Studied HHL Algorithm, Quantum Phase estimation & Generated MUBs (Mutually Unbiased Bases)</p>
-         </div>                
+         </div>
     </div>
 </div>
 
@@ -510,53 +515,58 @@
                    <i class="fa fa-file fa-fw w3-margin-right w3-xxsmall w3-text-blue"></i> CV
                </button>
                <div class="content">
-                       <div class="profile1">
-                           <h2 class="section-title">Conference Publications</h2>
-                           <div class="publication-item">
-                               <p>ExoSpikeNet: A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection, Comm. Systems and Network Technologies Conf [CSNT], 802-807</p>
-                               <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
-                           </div>
-                           <div class="publication-item">
-                               <p>QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, Geoscience and Remote Sensing Symposium [IGARSS 2024]</p>
-                               <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
-                           </div>
-                           <div class="publication-item">
-                               <p>HBO-DEViT: Vision Transformer Based Attention-Guided Evolutionary Architecture for Ship-Iceberg Categorisation in Arctic SAR Images, IEEE International Geoscience and Remote Sensing Symposium [IGARSS 2024]</p>
-                               <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
-                           </div>
-                           <div class="publication-item">
-                               <p>QGAPHEnsemble: Combining Hybrid QLSTM Network Ensemble via Adaptive Weighting for Short Term Weather Forecasting, IEEE World Congress on Computational Intelligence [CEC], 2024</p>
-                               <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
-                           </div>
-                           <div class="publication-item">
-                               <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Transformer Neural Network Model for Load Forecasting, Symposium Series on Computational Intelligence [SSCI], 234-239</p>
-                               <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
-                           </div>
-                           <div class="publication-item">
-                               <p>A Comparative Analysis on Metaheuristic Algorithms Based Vision Transformer Model for Early Detection of Alzheimer’s Disease, Computational Intelligence and Communication Networks [CICN], 200-205</p>
-                               <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
-                           </div>
-                           <div class="publication-item">
-                               <p>Differential Evolution Algorithm based Hyper-Parameters Selection of Convolutional Neural Network for Speech Command Recognition, Computational Intelligence - ECTA, Vol 1</p>
-                               <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
-                           </div>
-                           <div class="publication-item">
-                               <p>DEM-ViT: State-of-the-art Vision Transformer Model for Early Detection of Alzheimer’s Disease, National Conference on Communications [NCC], 1-6</p>
-                               <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
-                           </div>
+                   <div class="profile1">
+                       <h2 class="section-title">Conference Publications</h2>
+                       <div class="publication-item">
+                           <p class="publication-text">ExoSpikeNet: A Light Curve Analysis Based Spiking Neural Network for Exoplanet Detection, Comm. Systems and Network Technologies Conf [CSNT], 802-807</p>
+                           <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
                        </div>
-
-                       <div class="profile1">
-                           <h2 class="section-title">Journal Papers</h2>
-                           <div class="publication-item">
-                               <p>Comparative Evaluation of Evolutionary Metaheuristic Algorithms for Hyper-parameter Selection in Short-Term Weather Forecasting, Springer Nature Studies in Computational Intelligence</p>
-                               <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
-                           </div>
-                           <div class="publication-item">
-                               <p>Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing [QIP]</p>
-                               <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
+                       <div class="publication-item">
+                           <p class="publication-text">QGAPHnet: Quantum Genetic Algorithm Based Hybrid QLSTM Model for Soil Moisture Estimation, Geoscience and Remote Sensing Symposium [IGARSS 2024]</p>
+                           <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
+                       </div>
+                       <div class="publication-item">
+                           <p class="publication-text">HBO-DEViT: Vision Transformer Based Attention-Guided Evolutionary Architecture for Ship-Iceberg Categorisation in Arctic SAR Images, IEEE International Geoscience and Remote Sensing Symposium [IGARSS 2024]</p>
+                           <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
+                       </div>
+                       <div class="publication-item">
+                           <p class="publication-text">QGAPHEnsemble: Combining Hybrid QLSTM Network Ensemble via Adaptive Weighting for Short Term Weather Forecasting, IEEE World Congress on Computational Intelligence [CEC], 2024</p>
+                           <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
+                       </div>
+                       <div class="publication-item">
+                           <p class="publication-text">Differential Evolution Algorithm based Hyper-Parameters Selection of Transformer Neural Network Model for Load Forecasting, Symposium Series on Computational Intelligence [SSCI], 234-239</p>
+                           <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
+                       </div>
+                       <div class="publication-item">
+                           <p class="publication-text">A Comparative Analysis on Metaheuristic Algorithms Based Vision Transformer Model for Early Detection of Alzheimer’s Disease, Computational Intelligence and Communication Networks [CICN], 200-205</p>
+                           <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
+                       </div>
+                       <div class="publication-item">
+                           <p class="publication-text">Differential Evolution Algorithm based Hyper-Parameters Selection of Convolutional Neural Network for Speech Command Recognition, Computational Intelligence - ECTA, Vol 1</p>
+                           <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
+                       </div>
+                       <div class="publication-item">
+                           <p class="publication-text">DEM-ViT: State-of-the-art Vision Transformer Model for Early Detection of Alzheimer’s Disease, National Conference on Communications [NCC], 1-6</p>
+                           <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
                        </div>
                    </div>
+
+                   <div class="profile1">
+                       <h2 class="section-title">Journal Papers</h2>
+                       <div class="publication-item">
+                           <p class="publication-text">Comparative Evaluation of Evolutionary Metaheuristic Algorithms for Hyper-parameter Selection in Short-Term Weather Forecasting, Springer Nature Studies in Computational Intelligence</p>
+                           <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
+                       </div>
+                       <div class="publication-item">
+                           <p class="publication-text">Benchmarking Metaheuristic Integrated Quantum Approximate Optimization Algorithm against Quantum Annealing, 11th CSAI Conference, London, Quantum Information Processing [QIP]</p>
+                           <a href="#"><i class="fa fa-download fa-fw w3-margin-right w3-text-blue"></i></a>
+                       </div>
+                       <!-- Add more journal papers as needed -->
+                   </div>
+               </div>
+
+
+
                </div>
 
 
