--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
             border-radius: 5px;
             background-color: #f9f9f9; /* Light background */
             font-family: 'Times New Roman', Times, serif;
+            text-align: justify; /* Align text to justify if needed */
         }
 
         .profile2 h5 {
