--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                 <h5 class="w3-opacity"><b>Summer Research Intern, Indian Statistical Institute, Kolkata, India</b></h5>
                 <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2021 - Sep 2021</h6>
                 <p><i class="fa fa-user fa-fw w3-margin-right"></i>Dr. Subhamoy Maitra </p>
-                <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Quantum Algorithms, Deutsch-Josza Algorithm, Grover's Algorithm, Bernstein Vazirani Algorithm, Quantum Fourier Transform, and Quantum Phase estimation.</p>
+                <p><i class="fa fa-flask fa-fw w3-margin-right"></i>Quantum Algorithms, Deutsch-Josza Algorithm, Grover's Algorithm, Bernstein Vazirani Algorithm and Quantum Fourier Transform.</p>
                 <p><i class="fa fa-book fa-fw w3-margin-right"></i>Studied HHL Algorithm, Quantum Phase estimation & Generated MUBs (Mutually Unbiased Bases)</p>
          </div>
     </div>
